MS-298 Modal ESP unnecesary overflow fixed

--- a/resources/assets/less/base/tool/partials/modal.less
+++ b/resources/assets/less/base/tool/partials/modal.less
@@ -773,7 +773,7 @@
 
 .modal-esp {
   width: 750px;
-  overflow: scroll;
+  overflow: auto;
 
   .modal-container-inner{
     height: 55vh;
